--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -117,6 +117,13 @@ items:
               path: {{ $livenessProbeConfig.path }}
               scheme: {{ $livenessProbeConfig.scheme }}
               port: {{ $livenessProbeConfig.port | default $.Values.service.internalPort }}
+{{- if $livenessProbeConfig.httpHeaders }}
+              httpHeaders:
+{{- range $httpHeader := $livenessProbeConfig.httpHeaders }}
+              - name: {{ $httpHeader.name }}
+                value: {{ $httpHeader.value }}
+{{- end }}
+{{- end }}
 {{- else if eq $livenessProbeConfig.probeType "tcpSocket" }}
             tcpSocket:
               port: {{ $livenessProbeConfig.port | default $.Values.service.internalPort }}
@@ -137,6 +144,13 @@ items:
               path: {{ $readinessProbeConfig.path }}
               scheme: {{ $readinessProbeConfig.scheme }}
               port: {{ $readinessProbeConfig.port | default $.Values.service.internalPort }}
+{{- if $readinessProbeConfig.httpHeaders }}
+              httpHeaders:
+{{- range $httpHeader := $readinessProbeConfig.httpHeaders }}
+              - name: {{ $httpHeader.name }}
+                value: {{ $httpHeader.value }}
+{{- end }}
+{{- end }}
 {{- else if eq $readinessProbeConfig.probeType "tcpSocket" }}
             tcpSocket:
               port: {{ $readinessProbeConfig.port | default $.Values.service.internalPort }}
