--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -68,14 +68,19 @@ spec:
       topologySpreadConstraints:
 {{ toYaml .Values.topologySpreadConstraints | indent 8 }}
 {{- end }}
+{{- if or (.Values.persistence.enabled) (.Values.extraVolumes) }}
+      volumes:
 {{- if .Values.persistence.enabled }}
 {{- $context := . }}
-      volumes:
 {{- range $volume := .Values.persistence.volumes }}
         - name: {{ $volume.name | quote }}
           persistentVolumeClaim:
             {{ $args := dict "context" $context "name" $volume.name }}
             claimName: {{ template "pvcName" $args }}
+{{- end }}
+{{- end }}
+{{- if .Values.extraVolumes }}
+{{ toYaml .Values.extraVolumes | indent 8 }}
 {{- end }}
 {{- end }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
@@ -217,14 +222,19 @@ spec:
 {{- end }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
-{{- if .Values.persistence.enabled }}
+{{- if or (.Values.persistence.enabled) (.Values.extraVolumeMounts) }}
         volumeMounts:
+{{- if .Values.persistence.enabled }}        
 {{- range $volume := .Values.persistence.volumes }}
           - name: {{ $volume.name | quote }}
             mountPath: {{ $volume.mount.path | quote }}
             {{- if $volume.mount.subPath }}
             subPath: {{ $volume.mount.subPath | quote }}
             {{- end }}
+{{- end }}
+{{- end }}
+{{- if .Values.extraVolumeMounts }}
+{{ toYaml .Values.extraVolumeMounts | indent 10 }}           
 {{- end }}
 {{- end }}
 {{- end -}}
