--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -89,6 +89,10 @@ items:
         hostAliases:
 {{ $workerConfig.hostAliases | indent 10 }}
 {{- end }}
+{{- if $workerConfig.extraVolumes }}
+        volumes:
+{{ toYaml $workerConfig.extraVolumes | indent 10 }}
+{{- end }}
         containers:
         - name: {{ $.Chart.Name }}-{{ $workerName }}
           image: {{ template "imagename" $ }}
@@ -177,5 +181,9 @@ items:
           {{- end }}
           resources:
 {{ $workerConfig.resources | default $.Values.resources | toYaml | indent 12 }}
+{{- if $workerConfig.extraVolumeMounts }}
+          volumeMounts:
+{{ toYaml $workerConfig.extraVolumeMounts | indent 12 }}         
+{{- end }}
 {{- end -}}
 {{- end -}}
