--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -107,6 +107,14 @@ spec:
         envFrom:
         - secretRef:
             name: {{ .Values.application.secretName }}
+{{- if .Values.extraEnvFrom }}
+{{ toYaml .Values.extraEnvFrom | indent 8 }}
+{{- end }}
+        {{- else}}
+        envFrom:
+{{- if .Values.extraEnvFrom }}
+{{ toYaml .Values.extraEnvFrom | indent 8 }}
+{{- end }}
         {{- end }}
         env:
 {{- if .Values.postgresql.managed }}
