--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -220,6 +220,10 @@ extraVolumeMounts: []
 #   mountPath: /app/config.yaml
 #   subPath: config.yaml
 
+extraEnvFrom: []
+# - secretRef:
+#     name: {{ .Values.application.secretName }}
+
 workers: {}
   # worker:
   #   replicaCount: 1
@@ -268,6 +272,7 @@ workers: {}
   #   - stop_worker
   #   extraVolumes: []
   #   extraVolumeMounts: []
+  #   extraEnvFrom: []
 
 cronjobs: {}
   # job:
@@ -298,3 +303,4 @@ cronjobs: {}
   #     probeType: "httpGet"
   #   extraVolumes: []
   #   extraVolumeMounts: []
+  #   extraEnvFrom: []
