--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -376,6 +376,37 @@ test-show-warning-for-legacy-in-cluster-postgresql:
     - auto-deploy deploy| tee deploy.log || true
     - grep -q "Detected an existing PostgreSQL database" deploy.log || exit 1
 
+test-auto-database-url-remains-after-initial-deploy:
+  extends: test-deploy-postgres-enabled
+  script:
+    # Create a release/deployment
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - old=$(auto-deploy auto_database_url)
+    # Simulate POSTGRES_ENABLED default change
+    - unset POSTGRES_ENABLED
+    - new=$(auto-deploy auto_database_url)
+    - |
+      if [[ "$old" != "$new" ]]; then
+        echo "Database URL should not change"
+        exit 1
+      fi
+
+test-auto-database-url-empty-when-disabled:
+  extends: test-deploy-postgres-enabled
+  script:
+    # Create a release/deployment
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    # Disable postgres for new deployments
+    - export POSTGRES_ENABLED=false
+    - url=$(auto-deploy auto_database_url)
+    - |
+      if [[ -n "$url" ]]; then
+        echo "Database URL should not be set"
+        exit 1
+      fi
+
 test-deploy-canary:
   extends: test-deploy
   script:
