feat: add cronjob backoffLimit
- Expose the ability to control the backoffLimit of the cronjob to stop it running up to 7 times

--- a/assets/auto-deploy-app/templates/cronjob.yaml
+++ b/assets/auto-deploy-app/templates/cronjob.yaml
@@ -29,6 +29,9 @@ items:
         {{- if $jobConfig.activeDeadlineSeconds }}
         activeDeadlineSeconds: {{ $jobConfig.activeDeadlineSeconds }}
         {{- end }}
+        {{- if $jobConfig.backoffLimit }}
+        backoffLimit: {{ $jobConfig.backoffLimit }}
+        {{- end }}
         template:
           metadata:
             annotations:
