--- a/assets/auto-deploy-app/templates/cronjob.yaml
+++ b/assets/auto-deploy-app/templates/cronjob.yaml
@@ -42,7 +42,7 @@ items:
               app: {{ template "appname" $ }}
               release: {{ $.Release.Name }}
               track: "{{ $.Values.application.track }}"
-              tier: "{{ $.Values.application.tier }}"
+              tier: cronjob
           spec:
             imagePullSecrets:
               {{ toYaml $.Values.image.secrets | nindent 14 }}
