feat: add support for extraEnv value in chart

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -117,6 +117,9 @@ spec:
 {{- end }}
         {{- end }}
         env:
+{{- if .Values.extraEnv }}
+{{ toYaml .Values.extraEnv | indent 8 }}
+{{- end }}
 {{- if .Values.postgresql.managed }}
         - name: POSTGRES_USER
           valueFrom:
