feat: add 'enabled' flag for readiness and liveness probes in helm chart

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -161,6 +161,7 @@ spec:
           {{- end }}
 {{- end }}
 {{- end }}
+{{- if .Values.livenessProbe.enabled }}
         livenessProbe:
 {{- if eq .Values.livenessProbe.probeType "httpGet" }}
           httpGet:
@@ -184,6 +185,8 @@ spec:
 {{- end }}
           initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+{{- end }}
+{{- if .Values.readinessProbe.enabled }}
         readinessProbe:
 {{- if eq .Values.readinessProbe.probeType "httpGet" }}
           httpGet:
@@ -207,6 +210,7 @@ spec:
 {{- end }}
           initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+{{- end }}
 {{- if .Values.startupProbe.enabled }}
         startupProbe:
 {{- if eq .Values.startupProbe.probeType "httpGet" }}
