--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -55,6 +55,11 @@ items:
 {{ toYaml $nodeSelectorConfig | indent 10 }}
 {{- end }}
 {{- end }}
+{{- with $hostNetworkConfig := default $.Values.hostNetwork $workerConfig.hostNetwork -}}
+{{- if $hostNetworkConfig  }}
+        hostNetwork: {{ $hostNetworkConfig }}
+{{- end }}
+{{- end }}
 {{- with $dnsPolicyConfig := default $.Values.dnsPolicy $workerConfig.dnsPolicy -}}
 {{- if $dnsPolicyConfig  }}
         dnsPolicy: {{ $dnsPolicyConfig }}
@@ -191,7 +196,7 @@ items:
 {{ $workerConfig.resources | default $.Values.resources | toYaml | indent 12 }}
 {{- if $workerConfig.extraVolumeMounts }}
           volumeMounts:
-{{ toYaml $workerConfig.extraVolumeMounts | indent 12 }}         
+{{ toYaml $workerConfig.extraVolumeMounts | indent 12 }}
 {{- end }}
 {{- end -}}
 {{- end -}}
