--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -18,6 +18,7 @@ lifecycle: {}
 #     command: ["/bin/sh", "-c", "sleep 10"]
 podAnnotations: {}
 nodeSelector: {}
+securityContext: {}
 hostNetwork: false
 dnsPolicy: {}
 dnsConfig: {}
