--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -19,6 +19,7 @@ lifecycle: {}
 podAnnotations: {}
 nodeSelector: {}
 securityContext: {}
+containerSecurityContext: {}
 hostNetwork: false
 dnsPolicy: {}
 dnsConfig: {}
