--- a/assets/auto-deploy-app/templates/db-initialize-job.yaml
+++ b/assets/auto-deploy-app/templates/db-initialize-job.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       restartPolicy: Never
       imagePullSecrets:
-{{ toYaml .Values.image.secrets | indent 10 }}
+{{- toYaml .Values.image.secrets | nindent 10 }}
       containers:
       - name: {{ .Chart.Name }}
         image: {{ template "imagename" . }}
