fix: one missed indent
Signed-off-by: Martin Schurz <Martin.Schurz@telekom.de>

--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -49,7 +49,7 @@ items:
 {{- end }}
         imagePullSecrets:
 {{- if and $workerConfig.image $workerConfig.image.secrets }}
-{{- toYaml $workerConfig.image.secrets | indent 10 }}
+{{- toYaml $workerConfig.image.secrets | nindent 10 }}
 {{- else }}
 {{- toYaml $.Values.image.secrets | nindent 10 }}
 {{- end }}
