--- a/.gitlab/ci/chart.gitlab-ci.yml
+++ b/.gitlab/ci/chart.gitlab-ci.yml
@@ -46,7 +46,7 @@ chart:test:
   variables:
     GO_VERSION: "1.18.6"
   script:
-    - apk add build-base
+    - apk add build-base yamllint
     - wget https://golang.org/dl/go${GO_VERSION}.linux-amd64.tar.gz
     - tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz
     - export PATH=$PATH:/usr/local/go/bin
