--- a/assets/auto-deploy-app/templates/cronjob.yaml
+++ b/assets/auto-deploy-app/templates/cronjob.yaml
@@ -12,12 +12,16 @@ items:
   metadata:
     name: "{{ template "trackableappname" $ }}-{{ $jobName}}"
     annotations:
-      {{ if $.Values.gitlab.app }}app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}{{ end }}
-      {{ if $.Values.gitlab.env }}app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}{{ end }}
+      {{- if $.Values.gitlab.app }}
+      app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}
+      {{- end }}
+      {{- if $.Values.gitlab.env }}
+      app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}
+      {{- end }}
     labels:
       track: "{{ $.Values.application.track }}"
       tier: "{{ $.Values.application.tier }}"
-      {{ include "sharedlabels" $ | nindent 6 }}
+      {{- include "sharedlabels" $ | nindent 6 }}
   spec:
     concurrencyPolicy: {{ default "Forbid" $jobConfig.concurrencyPolicy }}
     failedJobsHistoryLimit: {{ default 1 $jobConfig.failedJobsHistoryLimit }}
@@ -36,8 +40,12 @@ items:
           metadata:
             annotations:
               checksum/application-secrets: "{{ $.Values.application.secretChecksum }}"
-              {{ if $.Values.gitlab.app }}app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}{{ end }}
-              {{ if $.Values.gitlab.env }}app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}{{ end }}
+              {{- if $.Values.gitlab.app }}
+              app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}
+              {{- end }}
+              {{- if $.Values.gitlab.env }}
+              app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}
+              {{- end }}
               {{- if $.Values.podAnnotations }}
               {{- toYaml $.Values.podAnnotations | nindent 14 }}
               {{- end }}
