--- a/assets/auto-deploy-app/templates/pvc.yaml
+++ b/assets/auto-deploy-app/templates/pvc.yaml
@@ -5,7 +5,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  {{ $args := dict "context" $context "name" $volume.name }}
+  {{- $args := dict "context" $context "name" $volume.name }}
   name: {{ template "pvcName" $args }}
   labels:
     track: "{{ $.Values.application.track }}"
