--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -8,8 +8,12 @@ items:
   metadata:
     name: {{ template "trackableappname" $ }}-{{ $workerName }}
     annotations:
-      {{ if $.Values.gitlab.app }}app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}{{ end }}
-      {{ if $.Values.gitlab.env }}app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}{{ end }}
+      {{- if $.Values.gitlab.app }}
+      app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}
+      {{- end }}
+      {{- if $.Values.gitlab.env }}
+      app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}
+      {{- end }}
     labels:
       track: "{{ $.Values.application.track }}"
       tier: worker
@@ -31,8 +35,12 @@ items:
       metadata:
         annotations:
           checksum/application-secrets: "{{ $.Values.application.secretChecksum }}"
-          {{ if $.Values.gitlab.app }}app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}{{ end }}
-          {{ if $.Values.gitlab.env }}app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}{{ end }}
+          {{- if $.Values.gitlab.app }}
+          app.gitlab.com/app: {{ $.Values.gitlab.app | quote }}
+          {{- end }}
+          {{- if $.Values.gitlab.env }}
+          app.gitlab.com/env: {{ $.Values.gitlab.env | quote }}
+          {{- end }}
 {{- if $.Values.podAnnotations }}
 {{- toYaml $.Values.podAnnotations | nindent 10 }}
 {{- end }}
